# Coordonnees

./: .copywrite.hcl  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml  test.py
.github/workflows/: check-copyright.yaml  code-quality.yaml  coordo-py.yml  lint.yaml  test.yml
common/: maplibre-style-spec-v8.ts
config/: settings.py  urls.py
configs/: all4trees_config.json  data4trees_config.json  seed_config.json
coordo-py/: .gitignore  README.md  pyproject.toml  test.py
coordo-py/coordo/: __init__.py  app.py  cli.py  config.py  helpers.py  maplibre_style_spec_v8.py
coordo-py/coordo/cli/: main.py
coordo-py/coordo/cli/datapackage/: __init__.py  add.py  annotations.py  append.py  delete.py  remove.py  replace.py
coordo-py/coordo/datapackage/: __init__.py  aggregate.py  datapackage.py  db_helpers.py  macros.sql  package.py  resource.py  spatialite.py  sql.py
coordo-py/coordo/layers/: __init__.py  base.py  datapackage.py  openmaptiles.py  xyzservices.py
coordo-py/coordo/loaders/: __init__.py  csv_file.py  csv_file_loader.py  excel_file.py  excel_file_loader.py  file.py  file_loader.py  kobotoolbox.py  kobotoolbox_loader.py  loader.py
coordo-py/coordo/map/: __init__.py  base.py  datapackage.py  maplibre_style_spec_v8.py  openmaptiles.py  xyzservices.py
coordo-py/coordo/sql/: __init__.py  aggregates.sql  builder.py  evaluator.py  helpers.py  mapper.py  parser.py
coordo-py/coordo/static/: coordo.css  coordo.iife.js  coordo.js
coordo-py/coordo/templates/: catalog.html  datapackage.html
coordo-py/tests/: __init__.py  conftest.py  test_builder.py  test_cli.py  test_cluster.py
coordo-py/tests/test_data/cli/input/: external_data2.csv  kobotoolbox_data.xlsx
coordo-py/tests/test_data/cli/output/: 001.datapackage.json  002.datapackage.json  003.datapackage.json  004.datapackage.json
coordo-py/tests/test_data/inventory/: inquiry.xlsx
coordo-ts/: .prettierrc  README.md  biome.json  eslint.config.ts  index.css  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
coordo-ts/src/: events.ts  index.css  index.ts  types.ts
coordo-ts/src/layers/: cluster.ts  controls.ts  filters.ts  popup.ts  symbol.ts
coordo-ts/src/map/: map.ts  style-data.ts
data/: .~lock.20250213_Inventaire_ID_QuestionnaireK.xlsx#  20241007_EnqueteMenage_CDF_Donnees.csv  config.json  dens_bois.csv  zones.geojson
data-test/: 20251017_Inventaire_ID_Donnees.xlsx
demo/: .gitignore  coordo.sqlite  db.sqlite3  pyproject.toml
demo/cartasso/: apps.py  urls.py  views.py
demo/cartasso/management/commands/: import_test_data.py
demo/cartasso/templates/cartasso/: index.html
demo/config/: settings.py  urls.py
demo/data/: .~lock.20250213_Inventaire_ID_QuestionnaireK.xlsx#  20240808_EnqueteMenage_CDF_QuestionnaireK.xlsx  20250213_Inventaire_ID_QuestionnaireK.xlsx  cle  config.json
form/: admin.py  urls.py  utils.py  views.py
form/management/commands/: import_data.py  import_xlsform.py
form/static/: map-plugin.js
form/templates/form/: index.html
js/: README.md  index.css  index.js  map-plugin.js  package-lock.json  package.json  vite.config.js
python/: .gitignore  README.md  config.json  kc.lic  pyproject.toml
python/coordo/: __init__.py  __main__.py  config.py  datapackage.py  query.py
python/coordo/datapackage/: __init__.py  aggregate.py  datapackage.py  spatialite.py
python/coordo/importers/: __main__.py  kobotoolbox.py
python/coordo/layer_parser/: __init__.py  __main__.py  base.py  maplibre_style_spec_v8.py  openmaptiles.py  sql.py  xyzservices.py
python/coordo/layers/: __init__.py  base.py  datapackage.py  maplibre_style_spec_v8.py  openmaptiles.py  query.py  sql.py  xyzservices.py
python/coordo/loaders/: constraint.py  kobotoolbox.py
python/coordo/sources/: __init__.py  kobotoolbox.py  spatialite.py
tests/: inquiry.xlsx
