[project]
name = "coordo"
version = "0.1.0"
description = "A set of modules to help with using spatio-temporal data and creating maps"
requires-python = ">=3.11"
dependencies = [
    "cross-web>=0.4.1",
    "dplib-py>=1.1.0",
    "duckdb>=1.4.4",
    "duckdb-sqlalchemy>=1.4.4.2",
    "flask>=3.1.2",
    "geojson>=3.2.0",
    "geopandas>=1.1.2",
    "lark>=1.3.1",
    "numpy>=2.2.6",
    "pandas==3.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pygeofilter>=0.3.3",
    "pyxform>=4.2.0",
    "shapely>=2.1.2",
    "sqlalchemy-serializer>=1.6.2",
    "sqlite-sqlean>=0.1",
    "typer>=0.24.0",
    "xyzservices>=2025.11.0",
]

[project.scripts]
coordo = "coordo.cli:app"
