[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coordo",
    "django>=6.0.1",
    "frictionless>=5.18.1",
]

[tool.uv.sources]
coordo = { path = "../python", editable = true }

[tool.uv]
config-settings = { editable_mode = "compat" }
